# graph_coloring

./: CMakeLists.txt
src/: main.cpp
src/Color/: Color.h
src/Error/: Error.cpp
src/Graph/: Graph.cpp  Graph.h  GraphComparator.cpp  GraphComparator.h  Node.cpp  Node.h  NodeColorData.h  NodeComparator.cpp  NodeComparator.h  NodeData.h
src/utils/: utils.h
